partiql/tests/snapshots/pretty__graph_edge_9.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:A) <~[e:E]~ (b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) <~[e:E]~ (b:B))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) <~[e:E]~ (b:B))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) <~[e:E]~ (b:B))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:A) <~[e:E]~ (b:B))

------------------------------
SELECT a, b
FROM (g MATCH (a:A) <~[e:E]~ (b:B))

--------------------
SELECT a, b
FROM (g MATCH (a:A) <~[e:E]~ (b:B))

----------
SELECT a,
  b
FROM (g MATCH (a:A) <~[e:E]~ (b:B))
