partiql/tests/snapshots/pretty__graph_etc_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH ALL SHORTEST ( (x)-[e]->*(y) ))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

----------------------------------------
SELECT *
FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

------------------------------
SELECT *
FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

--------------------
SELECT *
FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))

----------
SELECT *
FROM (g MATCH ALL SHORTEST ((x) -[e]->* (y)))
