partiql/tests/snapshots/pretty__graph_etc_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM g MATCH ALL SHORTEST [ TRAIL (x)-[e]->*(y) ]
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM g MATCH ALL SHORTEST [TRAIL (x) -[e]->* (y)]

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM g MATCH ALL SHORTEST [TRAIL (x) -[e]->* (y)]

--------------------------------------------------------------------------------
SELECT * FROM g MATCH ALL SHORTEST [TRAIL (x) -[e]->* (y)]

----------------------------------------
SELECT * FROM g MATCH ALL SHORTEST
  [TRAIL (x) -[e]->* (y)]

------------------------------
SELECT *
FROM g MATCH ALL SHORTEST
  [TRAIL (x) -[e]->* (y)]

--------------------
SELECT *
FROM g MATCH ALL SHORTEST
  [TRAIL (x) -[e]->* (y)]

----------
SELECT *
FROM g MATCH ALL SHORTEST
  [TRAIL (x) -[e]->* (y)]
