partiql/tests/snapshots/pretty__graph_etc_4.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ( (x)-[e]->*(y) ) KEEP ANY SIMPLE PATHS WHERE x.foo = 'bar'
                               )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

--------------------------------------------------------------------------------
SELECT *
FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

----------------------------------------
SELECT *
FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

------------------------------
SELECT *
FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

--------------------
SELECT *
FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))

----------
SELECT *
FROM (g MATCH DIFFERENT EDGES ALL SHORTEST ((x) -[e]->* (y)) KEEP ANY SIMPLE WHERE (x.foo = 'bar'))
