partiql/tests/snapshots/pretty__graph_etc_5.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH ( (x)-[e]->*(y) ) | (z) ~ (q) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

----------------------------------------
SELECT *
FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

------------------------------
SELECT *
FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

--------------------
SELECT *
FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))

----------
SELECT *
FROM (g MATCH ((x) -[e]->* (y)) | (z) ~ (q))
