partiql/tests/snapshots/pretty__graph_filters_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT u as banCandidate FROM g MATCH (p:Post Where p.isFlagged = true) <-[:createdPost]- (u:User WHERE u.isBanned = false AND u.karma < 20) -[:createdComment]->(c:Comment WHERE c.isFlagged = true) WHERE p.title LIKE '%considered harmful%'
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT u AS banCandidate FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false) AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

------------------------------------------------------------------------------------------------------------------------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false) AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

--------------------------------------------------------------------------------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false)
      AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

----------------------------------------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false)
      AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

------------------------------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false)
      AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

--------------------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false)
      AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'

----------
SELECT u AS banCandidate
FROM g MATCH (p:Post WHERE (p.isFlagged = true)) <-[:createdPost]- (u:User WHERE ((u.isBanned = false)
      AND
      (u.karma < 20))) -[:createdComment]-> (c:Comment WHERE (c.isFlagged = true))
WHERE p.title LIKE '%considered harmful%'
