partiql/tests/snapshots/pretty__graph_labels_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:%) -[e:%]-> (b:%))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:%) -[e:%]-> (b:%))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:%) -[e:%]-> (b:%))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:%) -[e:%]-> (b:%))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:%) -[e:%]-> (b:%))

------------------------------
SELECT a, b
FROM (g MATCH (a:%) -[e:%]-> (b:%))

--------------------
SELECT a, b
FROM (g MATCH (a:%) -[e:%]-> (b:%))

----------
SELECT a,
  b
FROM (g MATCH (a:%) -[e:%]-> (b:%))
