partiql/tests/snapshots/pretty__graph_labels_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:!Z) -[e:!D]-> (b:!Y))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

------------------------------
SELECT a, b
FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

--------------------
SELECT a, b
FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))

----------
SELECT a,
  b
FROM (g MATCH (a:!(Z)) -[e:!(D)]-> (b:!(Y)))
